--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -888,7 +888,7 @@ jobs:
                               continue
                           
                           # Parse requirement line
-                          match = re.match(r'^([a-zA-Z0-9_-]+)(\[.*?\])?(.*?), line)
+                          match = re.match(r'^([a-zA-Z0-9_-]+)(\[.*?\])?(.*?)', line)
                           if match:
                               package_name = match.group(1).lower()
                               version_spec = (match.group(2) or '') + (match.group(3) or '')
